move footprint to second screen@

--- a/index.html
+++ b/index.html
@@ -14,67 +14,13 @@
       <div class="nav-wrapper">
         <a href="#" class="brand-logo">Raise Awareness</a>
         <ul id="nav-mobile" class="right hide-on-med-and-down">
-          <li><a href="sass.html">Sass</a></li>
+          <li><a href="footprint.html">Footprint</a></li>
           <li><a href="badges.html">Components</a></li>
           <li><a href="collapsible.html">JavaScript</a></li>
         </ul>
       </div>
     </nav>
 
-    <!-- <div class="clearfix">
-
-        <div class="c100 p50 big green">
-            <span>50%</span>
-            <div class="slice">
-                <div class="bar"></div>
-                <div class="fill"></div>
-            </div>
-        </div>
-
-        <div class="c100 p25 green">
-            <span>25%</span>
-            <div class="slice">
-                <div class="bar"></div>
-                <div class="fill"></div>
-            </div>
-        </div>
-
-        <div class="c100 p12 small green">
-            <span>12%</span>
-            <div class="slice">
-                <div class="bar"></div>
-                <div class="fill"></div>
-            </div>
-        </div>
-
-    </div>
-    <div class="clearfix">
-
-        <div class="c100 p78 big">
-            <span>78%</span>
-            <div class="slice">
-                <div class="bar"></div>
-                <div class="fill"></div>
-            </div>
-        </div>
-
-        <div class="c100 p25">
-            <span>25%</span>
-            <div class="slice">
-                <div class="bar"></div>
-                <div class="fill"></div>
-            </div>
-        </div>
-
-        <div class="c100 p12 small">
-            <span>12%</span>
-            <div class="slice">
-                <div class="bar"></div>
-                <div class="fill"></div>
-            </div>
-        </div>
-
-    </div> -->
     <div class="row">
       <div class="col s9">
         <h1>Dashboard</h1>
@@ -95,18 +41,6 @@
              </div>
            </div>
          </div>
-       </div>
-       <div class="footprint">
-         <div class="foot foot-top">
-           <img src="images/foot_top.svg" alt="foot middle">
-         </div>
-         <div class="foot foot-middle">
-           <img src="images/foot_middle.svg" alt="foot middle">
-         </div>
-         <div class="foot foot-bottom">
-           <img src="images/foot_bottom.svg" alt="foot bottom">
-         </div>
-
        </div>
       </div>
       <div class="col s3">
