Add chart and sidebar

--- a/index.html
+++ b/index.html
@@ -21,220 +21,283 @@
       </div>
     </nav>
 
+  <div class="container">
     <div class="row">
       <div class="col s9">
         <h1>Dashboard</h1>
         <div class="row">
-         <div class="col s16">
-           <div class="card">
-             <div class="card-content">
-               <span class="card-title">Progress to level 13</span>
-               <div class="clearfix">
-                 <div class="c100 p84 big">
-                     <span>645 pt</span>
-                     <div class="slice">
-                         <div class="bar"></div>
-                         <div class="fill"></div>
+          <div class="col s6">
+            <div class="row">
+             <div class="col s16">
+               <div class="card">
+                 <div class="card-content">
+                   <span class="card-title">Progress to level 13</span>
+                   <div class="clearfix">
+                     <div class="c100 p84 big">
+                         <span>645 pt</span>
+                         <div class="slice">
+                             <div class="bar"></div>
+                             <div class="fill"></div>
+                         </div>
                      </div>
+                   </div>
                  </div>
                </div>
              </div>
            </div>
-         </div>
-       </div>
-      </div>
-      <div class="col s3">
-        <div class="row ranking">
-        <div class="col s12">
-          <ul class="tabs">
-            <li class="tab col s4"><a class="active" href="#test1">Friends</a></li>
-            <li class="tab col s4"><a href="#test2">SUI</a></li>
-            <li class="tab col s4"><a href="#test3">World</a></li>
-          </ul>
-        </div>
-        <div id="test1" class="col s12">
-          <table class="highlight striped">
-           <thead>
-             <tr>
-                 <th>Nr.</th>
-                 <th>Name</th>
-                 <th>Points</th>
-             </tr>
-           </thead>
-
-           <tbody>
-             <tr>
-               <td>1st</td>
-               <td>Philip Leuchter</td>
-               <td>1643</td>
-             </tr>
-             <tr>
-               <td>2nd</td>
-               <td>Laura Williams</td>
-               <td>1529</td>
-             </tr>
-             <tr>
-               <td>3rd</td>
-               <td>John Doe</td>
-               <td>1201</td>
-             </tr>
-             <tr>
-               <td>4th</td>
-               <td>Max Meier</td>
-               <td>845</td>
-             </tr>
-             <tr>
-               <td>5th</td>
-               <td>Melania Musterfrau</td>
-               <td>823</td>
-             </tr>
-           </tbody>
-         </table>
-             <span class="table-divider">...</span>
-         <table>
-          <tbody>
-             <tr>
-               <td>12th</td>
-               <td>Maria Maler</td>
-               <td>685</td>
-             </tr>
-             <tr class="own-row">
-               <td>13th</td>
-               <td>You</td>
-               <td>645</td>
-             </tr>
-             <tr>
-               <td>14th</td>
-               <td>Peter Schmidt</td>
-               <td>635</td>
-             </tr>
-           </tbody>
-         </table>
-        </div>
-        <div id="test2" class="col s12">
-          <table class="highlight striped">
-           <thead>
-             <tr>
-                 <th>Nr.</th>
-                 <th>Name</th>
-                 <th>Points</th>
-             </tr>
-           </thead>
-
-           <tbody>
-             <tr>
-               <td>1st</td>
-               <td>Philip Leuchter</td>
-               <td>1643</td>
-             </tr>
-             <tr>
-               <td>2nd</td>
-               <td>Laura Williams</td>
-               <td>1529</td>
-             </tr>
-             <tr>
-               <td>3rd</td>
-               <td>John Doe</td>
-               <td>1201</td>
-             </tr>
-             <tr>
-               <td>4th</td>
-               <td>Max Meier</td>
-               <td>845</td>
-             </tr>
-             <tr>
-               <td>5th</td>
-               <td>Melania Musterfrau</td>
-               <td>823</td>
-             </tr>
-           </tbody>
-         </table>
-             <span class="table-divider">...</span>
-         <table>
-          <tbody>
-             <tr>
-               <td>12th</td>
-               <td>Maria Maler</td>
-               <td>685</td>
-             </tr>
-             <tr class="own-row">
-               <td>13th</td>
-               <td>You</td>
-               <td>645</td>
-             </tr>
-             <tr>
-               <td>14th</td>
-               <td>Peter Schmidt</td>
-               <td>635</td>
-             </tr>
-           </tbody>
-         </table>
-        </div>
-        <div id="test3" class="col s12">
-          <table class="highlight striped">
-           <thead>
-             <tr>
-                 <th>Nr.</th>
-                 <th>Name</th>
-                 <th>Points</th>
-             </tr>
-           </thead>
-
-           <tbody>
-             <tr>
-               <td>1st</td>
-               <td>Philip Leuchter</td>
-               <td>1643</td>
-             </tr>
-             <tr>
-               <td>2nd</td>
-               <td>Laura Williams</td>
-               <td>1529</td>
-             </tr>
-             <tr>
-               <td>3rd</td>
-               <td>John Doe</td>
-               <td>1201</td>
-             </tr>
-             <tr>
-               <td>4th</td>
-               <td>Max Meier</td>
-               <td>845</td>
-             </tr>
-             <tr>
-               <td>5th</td>
-               <td>Melania Musterfrau</td>
-               <td>823</td>
-             </tr>
-           </tbody>
-         </table>
-             <span class="table-divider">...</span>
-         <table>
-          <tbody>
-             <tr>
-               <td>12th</td>
-               <td>Maria Maler</td>
-               <td>685</td>
-             </tr>
-             <tr class="own-row">
-               <td>13th</td>
-               <td>You</td>
-               <td>645</td>
-             </tr>
-             <tr>
-               <td>14th</td>
-               <td>Peter Schmidt</td>
-               <td>635</td>
-             </tr>
-           </tbody>
-         </table>
+          </div>
+          <div class="col s6">
+             <div class="card">
+                 <div class="card-content">
+                   <span class="card-title">Your emission timeline</span>
+                   <canvas id="emission_timeline"></canvas>
+                 </div>
+             </div>
+          </div>
         </div>
       </div>
-      </span></div>
+      <div id="sidebar"class="col s3">
+        <div class="card">
+          <div class="card-content">
+            <div class="row ranking">
+            <div class="col s12">
+              <ul class="tabs">
+                <li class="tab col s4"><a class="active" href="#test1">Friends</a></li>
+                <li class="tab col s4"><a href="#test2">SUI</a></li>
+                <li class="tab col s4"><a href="#test3">World</a></li>
+              </ul>
+            </div>
+            <div id="test1" class="col s12">
+              <table class="highlight striped">
+                <thead>
+                  <tr>
+                    <th>Nr.</th>
+                    <th>Name</th>
+                    <th>Points</th>
+                  </tr>
+                </thead>
+
+                <tbody>
+                  <tr>
+                    <td>1st</td>
+                    <td>Philip Leuchter</td>
+                    <td>1643</td>
+                  </tr>
+                  <tr>
+                    <td>2nd</td>
+                    <td>Laura Williams</td>
+                    <td>1529</td>
+                  </tr>
+                  <tr>
+                    <td>3rd</td>
+                    <td>John Doe</td>
+                    <td>1201</td>
+                  </tr>
+                  <tr>
+                    <td>4th</td>
+                    <td>Max Meier</td>
+                    <td>845</td>
+                  </tr>
+                  <tr>
+                    <td>5th</td>
+                    <td>Melania Musterfrau</td>
+                    <td>823</td>
+                  </tr>
+                </tbody>
+              </table>
+              <span class="table-divider">...</span>
+              <table>
+                <tbody>
+                  <tr>
+                    <td>12th</td>
+                    <td>Maria Maler</td>
+                    <td>685</td>
+                  </tr>
+                  <tr class="own-row">
+                    <td>13th</td>
+                    <td>You</td>
+                    <td>645</td>
+                  </tr>
+                  <tr>
+                    <td>14th</td>
+                    <td>Peter Schmidt</td>
+                    <td>635</td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
+            <div id="test2" class="col s12">
+              <table class="highlight striped">
+                <thead>
+                  <tr>
+                    <th>Nr.</th>
+                    <th>Name</th>
+                    <th>Points</th>
+                  </tr>
+                </thead>
+
+                <tbody>
+                  <tr>
+                    <td>1st</td>
+                    <td>Philip Leuchter</td>
+                    <td>1643</td>
+                  </tr>
+                  <tr>
+                    <td>2nd</td>
+                    <td>Laura Williams</td>
+                    <td>1529</td>
+                  </tr>
+                  <tr>
+                    <td>3rd</td>
+                    <td>John Doe</td>
+                    <td>1201</td>
+                  </tr>
+                  <tr>
+                    <td>4th</td>
+                    <td>Max Meier</td>
+                    <td>845</td>
+                  </tr>
+                  <tr>
+                    <td>5th</td>
+                    <td>Melania Musterfrau</td>
+                    <td>823</td>
+                  </tr>
+                </tbody>
+              </table>
+              <span class="table-divider">...</span>
+              <table>
+                <tbody>
+                  <tr>
+                    <td>12th</td>
+                    <td>Maria Maler</td>
+                    <td>685</td>
+                  </tr>
+                  <tr class="own-row">
+                    <td>13th</td>
+                    <td>You</td>
+                    <td>645</td>
+                  </tr>
+                  <tr>
+                    <td>14th</td>
+                    <td>Peter Schmidt</td>
+                    <td>635</td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
+            <div id="test3" class="col s12">
+              <table class="highlight striped">
+                <thead>
+                  <tr>
+                    <th>Nr.</th>
+                    <th>Name</th>
+                    <th>Points</th>
+                  </tr>
+                </thead>
+
+                <tbody>
+                  <tr>
+                    <td>1st</td>
+                    <td>Philip Leuchter</td>
+                    <td>1643</td>
+                  </tr>
+                  <tr>
+                    <td>2nd</td>
+                    <td>Laura Williams</td>
+                    <td>1529</td>
+                  </tr>
+                  <tr>
+                    <td>3rd</td>
+                    <td>John Doe</td>
+                    <td>1201</td>
+                  </tr>
+                  <tr>
+                    <td>4th</td>
+                    <td>Max Meier</td>
+                    <td>845</td>
+                  </tr>
+                  <tr>
+                    <td>5th</td>
+                    <td>Melania Musterfrau</td>
+                    <td>823</td>
+                  </tr>
+                </tbody>
+              </table>
+              <span class="table-divider">...</span>
+              <table>
+                <tbody>
+                  <tr>
+                    <td>12th</td>
+                    <td>Maria Maler</td>
+                    <td>685</td>
+                  </tr>
+                  <tr class="own-row">
+                    <td>13th</td>
+                    <td>You</td>
+                    <td>645</td>
+                  </tr>
+                  <tr>
+                    <td>14th</td>
+                    <td>Peter Schmidt</td>
+                    <td>635</td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
+          </div>
+        </div>
+        </div>
+        
+      </span>
     </div>
+    </div>
+  </div>
 
     <script type="text/javascript" src="js/jquery.js"></script>
     <script type="text/javascript" src="js/materialize.min.js"></script>
     <script type="text/javascript" src="js/main.js"></script>
+    <script type="text/javascript" src="js/chart.js"></script>
+
+    <script>
+      var ctx = document.getElementById("emission_timeline");
+      var chart = new Chart(ctx, {
+          type: 'line',
+          data: {
+            datasets: [
+            {
+              label: 'GWP',
+              data: [0.5, 0.46, 0.3, 0.32, 0.2],
+              fill: false,
+              borderColor: '#DE7576',
+              backgroundColor: '#DE7576'
+            },
+            {
+              label: 'Energy',
+              data: [0.7, 0.5, 0.4, 0.45, 0.39],
+              fill: false,
+              borderColor: '#447BB6',
+              backgroundColor: '#447BB6'
+            },
+            {
+              label: 'Water',
+              data: [0.4, 0.3, 0.25, 0.26, 0.23],
+              fill: false,
+              borderColor: '#cbcbcb',
+              backgroundColor: '#cbcbcb'
+            }
+            ],
+            labels: ['March', 'April', 'June', 'July', 'August'],
+          },
+          options: {
+            scales: {
+              yAxes: [{
+                ticks: {
+                  max: 1.0
+                }
+              }]
+            }
+          }
+      })
+      </script>
   </body>
 </html>
