add challenges card

--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
   <div class="container">
     <div class="row">
       <div class="col s9">
+
         <h1>Dashboard</h1>
+
         <div class="row">
           <div class="col s6">
             <div class="row">
@@ -46,6 +48,7 @@
              </div>
            </div>
           </div>
+
           <div class="col s6">
              <div class="card">
                  <div class="card-content">
@@ -54,8 +57,78 @@
                  </div>
              </div>
           </div>
+         </div>
+
+       <div class="row">
+        <div class="col s16">
+          <div class="card" style="width: 500px;">
+            <div class="card-content">
+              <div class="challenges-ongoing">
+                <h5>Ongoing Challenges</h5>
+                <ul class="collection">
+                  <li class="collection-item avatar" style="line-height: 65px;">
+                    <i class="material-icons circle">kitchen</i>
+                    <span class="title">70%</span>
+                    <div class="progress" style="float: right; height: 20px; width: 300px; margin: 22px 0 0 0">
+                      <div class="determinate" style="width: 70%"></div>
+                    </div>
+                  </li>
+                </ul>
+              </div>
+              <div class="challenges-propsed">
+                <h5>Proposed Challenges</h5>
+                <ul class="collection">
+                  <li class="collection-item avatar">
+                    <i class="material-icons circle red">kitchen</i>
+                    <span class="title">Fridge Competition</span>
+                    <p>One Month <br>
+                      Reduce costs as much as you can!
+                    </p>
+                  </li>
+                  <li class="collection-item avatar">
+                    <i class="material-icons circle">cake</i>
+                    <span class="title">Cake Competition</span>
+                    <p>One Day<br>
+                       Bake a cake only using green ingredients!
+                    </p>
+                  </li>
+                  <li class="collection-item avatar">
+                    <i class="material-icons circle green">trending_down</i>
+                    <span class="title">Lower Footprint</span>
+                    <p>One Week<br>
+                       Lower yout footprint by 2% within a week!
+                    </p>
+                  </li>
+                </ul>
+
+              </div>
+              <div class="challenges-finished">
+                <h5>Finished Challenges</h5>
+                <ul class="collection">
+                  <li class="collection-item avatar">
+                    <i class="material-icons circle green">check</i>
+                    <span class="title">Recipe Challenges</span>
+                    <p>Won against Jane.</p>
+                  </li>
+                  <li class="collection-item avatar">
+                    <i class="material-icons circle red">close</i>
+                    <span class="title">Shopping Challenge</span>
+                    <p>Lost against Grandma.</p>
+                  </li>
+                  <li class="collection-item avatar">
+                    <i class="material-icons circle green">check</i>
+                    <span class="title">Reduce Red Items Challenge</span>
+                    <p>Won against John.</p>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
+
+      </div>
+
       <div id="sidebar"class="col s3">
         <div class="card">
           <div class="card-content">
@@ -247,8 +320,6 @@
           </div>
         </div>
         </div>
-        
-      </span>
     </div>
     </div>
   </div>
