--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link type="text/css" rel="stylesheet" href="css/circle.css"  media="screen,projection"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   </head>
-  <body>\
+  <body>
     <nav>
       <div class="nav-wrapper">
         <a href="#" class="brand-logo">Raise Awareness</a>
@@ -144,201 +144,195 @@
          </div>
 
 
+  </div>
 
+  <div id="sidebar" class="card">
+    <div class="card-content">
+      <div class="row ranking">
+      <div class="col s12">
+        <ul class="tabs">
+          <li class="tab col s4"><a class="active" href="#test1">Friends</a></li>
+          <li class="tab col s4"><a href="#test2">SUI</a></li>
+          <li class="tab col s4"><a href="#test3">World</a></li>
+        </ul>
       </div>
+      <div id="test1" class="col s12">
+        <table class="highlight striped">
+          <thead>
+            <tr>
+              <th>Nr.</th>
+              <th>Name</th>
+              <th>Points</th>
+            </tr>
+          </thead>
 
-      <div id="sidebar"class="col s3">
-        <div class="card">
-          <div class="card-content">
-            <div class="row ranking">
-            <div class="col s12">
-              <ul class="tabs">
-                <li class="tab col s4"><a class="active" href="#test1">Friends</a></li>
-                <li class="tab col s4"><a href="#test2">SUI</a></li>
-                <li class="tab col s4"><a href="#test3">World</a></li>
-              </ul>
-            </div>
-            <div id="test1" class="col s12">
-              <table class="highlight striped">
-                <thead>
-                  <tr>
-                    <th>Nr.</th>
-                    <th>Name</th>
-                    <th>Points</th>
-                  </tr>
-                </thead>
+          <tbody>
+            <tr>
+              <td>1st</td>
+              <td>Philip Leuchter</td>
+              <td>1643</td>
+            </tr>
+            <tr>
+              <td>2nd</td>
+              <td>Laura Williams</td>
+              <td>1529</td>
+            </tr>
+            <tr>
+              <td>3rd</td>
+              <td>John Doe</td>
+              <td>1201</td>
+            </tr>
+            <tr>
+              <td>4th</td>
+              <td>Max Meier</td>
+              <td>845</td>
+            </tr>
+            <tr>
+              <td>5th</td>
+              <td>Melania Musterfrau</td>
+              <td>823</td>
+            </tr>
+          </tbody>
+        </table>
+        <span class="table-divider">...</span>
+        <table>
+          <tbody>
+            <tr>
+              <td>12th</td>
+              <td>Maria Maler</td>
+              <td>685</td>
+            </tr>
+            <tr class="own-row">
+              <td>13th</td>
+              <td>You</td>
+              <td>645</td>
+            </tr>
+            <tr>
+              <td>14th</td>
+              <td>Peter Schmidt</td>
+              <td>635</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+      <div id="test2" class="col s12">
+        <table class="highlight striped">
+          <thead>
+            <tr>
+              <th>Nr.</th>
+              <th>Name</th>
+              <th>Points</th>
+            </tr>
+          </thead>
 
-                <tbody>
-                  <tr>
-                    <td>1st</td>
-                    <td>Philip Leuchter</td>
-                    <td>1643</td>
-                  </tr>
-                  <tr>
-                    <td>2nd</td>
-                    <td>Laura Williams</td>
-                    <td>1529</td>
-                  </tr>
-                  <tr>
-                    <td>3rd</td>
-                    <td>John Doe</td>
-                    <td>1201</td>
-                  </tr>
-                  <tr>
-                    <td>4th</td>
-                    <td>Max Meier</td>
-                    <td>845</td>
-                  </tr>
-                  <tr>
-                    <td>5th</td>
-                    <td>Melania Musterfrau</td>
-                    <td>823</td>
-                  </tr>
-                </tbody>
-              </table>
-              <span class="table-divider">...</span>
-              <table>
-                <tbody>
-                  <tr>
-                    <td>12th</td>
-                    <td>Maria Maler</td>
-                    <td>685</td>
-                  </tr>
-                  <tr class="own-row">
-                    <td>13th</td>
-                    <td>You</td>
-                    <td>645</td>
-                  </tr>
-                  <tr>
-                    <td>14th</td>
-                    <td>Peter Schmidt</td>
-                    <td>635</td>
-                  </tr>
-                </tbody>
-              </table>
-            </div>
-            <div id="test2" class="col s12">
-              <table class="highlight striped">
-                <thead>
-                  <tr>
-                    <th>Nr.</th>
-                    <th>Name</th>
-                    <th>Points</th>
-                  </tr>
-                </thead>
+          <tbody>
+            <tr>
+              <td>1st</td>
+              <td>Philip Leuchter</td>
+              <td>1643</td>
+            </tr>
+            <tr>
+              <td>2nd</td>
+              <td>Laura Williams</td>
+              <td>1529</td>
+            </tr>
+            <tr>
+              <td>3rd</td>
+              <td>John Doe</td>
+              <td>1201</td>
+            </tr>
+            <tr>
+              <td>4th</td>
+              <td>Max Meier</td>
+              <td>845</td>
+            </tr>
+            <tr>
+              <td>5th</td>
+              <td>Melania Musterfrau</td>
+              <td>823</td>
+            </tr>
+          </tbody>
+        </table>
+        <span class="table-divider">...</span>
+        <table>
+          <tbody>
+            <tr>
+              <td>12th</td>
+              <td>Maria Maler</td>
+              <td>685</td>
+            </tr>
+            <tr class="own-row">
+              <td>13th</td>
+              <td>You</td>
+              <td>645</td>
+            </tr>
+            <tr>
+              <td>14th</td>
+              <td>Peter Schmidt</td>
+              <td>635</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+      <div id="test3" class="col s12">
+        <table class="highlight striped">
+          <thead>
+            <tr>
+              <th>Nr.</th>
+              <th>Name</th>
+              <th>Points</th>
+            </tr>
+          </thead>
 
-                <tbody>
-                  <tr>
-                    <td>1st</td>
-                    <td>Philip Leuchter</td>
-                    <td>1643</td>
-                  </tr>
-                  <tr>
-                    <td>2nd</td>
-                    <td>Laura Williams</td>
-                    <td>1529</td>
-                  </tr>
-                  <tr>
-                    <td>3rd</td>
-                    <td>John Doe</td>
-                    <td>1201</td>
-                  </tr>
-                  <tr>
-                    <td>4th</td>
-                    <td>Max Meier</td>
-                    <td>845</td>
-                  </tr>
-                  <tr>
-                    <td>5th</td>
-                    <td>Melania Musterfrau</td>
-                    <td>823</td>
-                  </tr>
-                </tbody>
-              </table>
-              <span class="table-divider">...</span>
-              <table>
-                <tbody>
-                  <tr>
-                    <td>12th</td>
-                    <td>Maria Maler</td>
-                    <td>685</td>
-                  </tr>
-                  <tr class="own-row">
-                    <td>13th</td>
-                    <td>You</td>
-                    <td>645</td>
-                  </tr>
-                  <tr>
-                    <td>14th</td>
-                    <td>Peter Schmidt</td>
-                    <td>635</td>
-                  </tr>
-                </tbody>
-              </table>
-            </div>
-            <div id="test3" class="col s12">
-              <table class="highlight striped">
-                <thead>
-                  <tr>
-                    <th>Nr.</th>
-                    <th>Name</th>
-                    <th>Points</th>
-                  </tr>
-                </thead>
-
-                <tbody>
-                  <tr>
-                    <td>1st</td>
-                    <td>Philip Leuchter</td>
-                    <td>1643</td>
-                  </tr>
-                  <tr>
-                    <td>2nd</td>
-                    <td>Laura Williams</td>
-                    <td>1529</td>
-                  </tr>
-                  <tr>
-                    <td>3rd</td>
-                    <td>John Doe</td>
-                    <td>1201</td>
-                  </tr>
-                  <tr>
-                    <td>4th</td>
-                    <td>Max Meier</td>
-                    <td>845</td>
-                  </tr>
-                  <tr>
-                    <td>5th</td>
-                    <td>Melania Musterfrau</td>
-                    <td>823</td>
-                  </tr>
-                </tbody>
-              </table>
-              <span class="table-divider">...</span>
-              <table>
-                <tbody>
-                  <tr>
-                    <td>12th</td>
-                    <td>Maria Maler</td>
-                    <td>685</td>
-                  </tr>
-                  <tr class="own-row">
-                    <td>13th</td>
-                    <td>You</td>
-                    <td>645</td>
-                  </tr>
-                  <tr>
-                    <td>14th</td>
-                    <td>Peter Schmidt</td>
-                    <td>635</td>
-                  </tr>
-                </tbody>
-              </table>
-            </div>
-          </div>
-        </div>
-        </div>
-    </div>
+          <tbody>
+            <tr>
+              <td>1st</td>
+              <td>Philip Leuchter</td>
+              <td>1643</td>
+            </tr>
+            <tr>
+              <td>2nd</td>
+              <td>Laura Williams</td>
+              <td>1529</td>
+            </tr>
+            <tr>
+              <td>3rd</td>
+              <td>John Doe</td>
+              <td>1201</td>
+            </tr>
+            <tr>
+              <td>4th</td>
+              <td>Max Meier</td>
+              <td>845</td>
+            </tr>
+            <tr>
+              <td>5th</td>
+              <td>Melania Musterfrau</td>
+              <td>823</td>
+            </tr>
+          </tbody>
+        </table>
+        <span class="table-divider">...</span>
+        <table>
+          <tbody>
+            <tr>
+              <td>12th</td>
+              <td>Maria Maler</td>
+              <td>685</td>
+            </tr>
+            <tr class="own-row">
+              <td>13th</td>
+              <td>You</td>
+              <td>645</td>
+            </tr>
+            <tr>
+              <td>14th</td>
+              <td>Peter Schmidt</td>
+              <td>635</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
     </div>
   </div>
 
