Add coloured footprints

--- a/footprint.html
+++ b/footprint.html
@@ -62,13 +62,13 @@
               <span class="card-title">Your current footprint</span>
               <div>
                 <div class="foot foot-top">
-                  <img src="images/foot_top.svg" alt="foot middle">
+                  <img src="images/foot_top_red.svg" alt="foot middle">
                 </div>
                 <div class="foot foot-middle">
-                  <img src="images/foot_middle.svg" alt="foot middle">
+                  <img src="images/foot_middle_red.svg" alt="foot middle">
                 </div>
                 <div class="foot foot-bottom">
-                  <img src="images/foot_bottom.svg" alt="foot bottom">
+                  <img src="images/foot_bottom_red.svg" alt="foot bottom">
                 </div>
               </div>
             </div>
