preliminary challenge ending screen

--- a/footprint.html
+++ b/footprint.html
@@ -86,10 +86,10 @@
     <div id="simulate-scan-button">
       <a class="waves-effect waves-light btn btn-large">Simulate scan</a>
     </div>
-<!--
-    <div id="simulate-scan-button">
-      <a class="waves-effect waves-light btn">Simulate scan</a>
-    </div> -->
+
+    <div id="simulate-challenge-button">
+      <a class="waves-effect waves-light btn btn-large" href="challengeEnding.html">Simulate and finish challenge</a>
+    </div>
 
     <script type="text/javascript" src="js/jquery.js"></script>
     <script type="text/javascript" src="js/materialize.min.js"></script>
