--- a/index.html
+++ b/index.html
@@ -28,14 +28,13 @@
         <h1>Dashboard</h1>
 
         <div class="row">
-          <div class="col s6">
-            <div class="row">
-             <div class="col s16">
+          <div class="col s5">
+
                <div class="card">
-                 <div class="card-content">
+                 <div class="card-content" style="text-align: center;">
                    <span class="card-title">Progress to level 13</span>
-                   <div class="clearfix">
-                     <div class="c100 p84 big">
+                   <div class="clearfix" style="margin-left: 45px;">
+                     <div class="c100 p84 big" style="margin: 0 auto;">
                          <span>645 pt</span>
                          <div class="slice">
                              <div class="bar"></div>
@@ -45,11 +44,9 @@
                    </div>
                  </div>
                </div>
-             </div>
-           </div>
           </div>
 
-          <div class="col s6">
+          <div class="col s7">
              <div class="card">
                  <div class="card-content">
                    <span class="card-title">Your emission timeline</span>
@@ -60,51 +57,6 @@
          </div>
 
          <div class="row">
-           <div class="col s7">
-             <div class="row">
-              <div class="col s16">
-                <div class="card" style="width: 500px;">
-                  <div class="card-content">
-                    <div class="challenges-ongoing">
-                      <h5>Ongoing Challenges</h5>
-                      <ul class="collection">
-                        <li class="collection-item avatar" style="line-height: 65px;">
-                          <i class="material-icons circle">kitchen</i>
-                          <span class="title">70%</span>
-                          <div class="progress" style="float: right; height: 20px; width: 300px; margin: 22px 0 0 0">
-                            <div class="determinate" style="width: 70%"></div>
-                          </div>
-                        </li>
-                      </ul>
-                    </div>
-
-                    <div class="challenges-finished">
-                      <h5>Finished Challenges</h5>
-                      <ul class="collection">
-                        <li class="collection-item avatar">
-                          <i class="material-icons circle green">check</i>
-                          <span class="title">Recipe Challenges</span>
-                          <p>Won against Jane.</p>
-                        </li>
-                        <li class="collection-item avatar">
-                          <i class="material-icons circle red">close</i>
-                          <span class="title">Shopping Challenge</span>
-                          <p>Lost against Grandma.</p>
-                        </li>
-                        <li class="collection-item avatar">
-                          <i class="material-icons circle green">check</i>
-                          <span class="title">Reduce Red Items Challenge</span>
-                          <p>Won against John.</p>
-                        </li>
-                      </ul>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-
-           </div>
-
            <div class="col s5">
              <div class="row">
                <div class="col s16">
@@ -140,6 +92,50 @@
                  </div>
                </div>
              </div>
+           </div>
+
+           <div class="col s7">
+             <div class="row">
+              <div class="col s16" style="width: 100%;">
+                <div class="card">
+                  <div class="card-content">
+                    <div class="challenges-ongoing">
+                      <h5>Ongoing Challenges</h5>
+                      <ul class="collection">
+                        <li class="collection-item avatar" style="line-height: 65px;">
+                          <i class="material-icons circle">kitchen</i>
+                          <span class="title">70%</span>
+                          <div class="progress" style="float: right; height: 20px; width: 350px; margin: 22px 0 0 0">
+                            <div class="determinate" style="width: 70%"></div>
+                          </div>
+                        </li>
+                      </ul>
+                    </div>
+
+                    <div class="challenges-finished">
+                      <h5>Finished Challenges</h5>
+                      <ul class="collection">
+                        <li class="collection-item avatar">
+                          <i class="material-icons circle green">check</i>
+                          <span class="title">Recipe Challenges</span>
+                          <p>Won against Jane.</p>
+                        </li>
+                        <li class="collection-item avatar">
+                          <i class="material-icons circle red">close</i>
+                          <span class="title">Shopping Challenge</span>
+                          <p>Lost against Grandma.</p>
+                        </li>
+                        <li class="collection-item avatar">
+                          <i class="material-icons circle green">check</i>
+                          <span class="title">Reduce Red Items Challenge</span>
+                          <p>Won against John.</p>
+                        </li>
+                      </ul>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
            </div>
          </div>
 
