go to challenge url after click on challenge

--- a/challengeEnding.html
+++ b/challengeEnding.html
@@ -12,12 +12,7 @@
   <body class="footprint-page">
     <nav>
       <div class="nav-wrapper">
-        <a href="#" class="brand-logo">Raise Awareness</a>
-        <ul id="nav-mobile" class="right hide-on-med-and-down">
-          <li><a href="sass.html">Sass</a></li>
-          <li><a href="badges.html">Components</a></li>
-          <li><a href="collapsible.html">JavaScript</a></li>
-        </ul>
+        <a href="#" class="brand-logo center">Raise Awareness</a>
       </div>
     </nav>
     <div class="container">
