--- a/index.html
+++ b/index.html
@@ -12,12 +12,7 @@
   <body>
     <nav>
       <div class="nav-wrapper">
-        <a href="#" class="brand-logo">Raise Awareness</a>
-        <ul id="nav-mobile" class="right hide-on-med-and-down">
-          <li><a href="footprint.html">Footprint</a></li>
-          <li><a href="badges.html">Components</a></li>
-          <li><a href="collapsible.html">JavaScript</a></li>
-        </ul>
+        <a href="#" class="brand-logo center">Raise Awareness</a>
       </div>
     </nav>
 
@@ -65,7 +60,7 @@
                      <div class="challenges-propsed">
                        <h5>Proposed Challenges</h5>
                        <ul class="collection">
-                         <li class="collection-item avatar">
+                         <li class="collection-item avatar" id="challenge-button">
                            <i class="material-icons circle red">kitchen</i>
                            <span class="title">Fridge Competition</span>
                            <p>One Month <br>
